# Trading-Engine-in-C-

./: .gitignore  CMakeLists.txt  Problem.md  README.md  generate_data.py
data/: SPY.csv
src/: backtester.cpp  backtester.h  data_loader.cpp  data_loader.h  main.cpp  metrics.cpp  metrics.h  portfolio.cpp  portfolio.h  price_bar.h  reporter.cpp  reporter.h  signal.h  smaindicator.cpp  smaindicator.h  strategy.h
